WIP: Still working on getting date diff to work

--- a/interface/forms/newpatient/templates/report.html.twig
+++ b/interface/forms/newpatient/templates/report.html.twig
@@ -9,14 +9,13 @@
     {% if e.referringProvider %}
         <br>{{ "Referring Provider"|xlt }} - {{ e.referringProvider|text }}
     {% endif %}
-    {% if e.startTime %}
-        <br>{{ "Start Time"|xlt }} - {{ e.startTime|date("h:i a") }}
-    {% endif %}
-    {% if e.endTime %}
-        <br>{{ "End Time"|xlt }} - {{ e.endTime|date("h:i a") }}
-    {% endif %}
-    {% if e.totalTime %}
-        <br>{{ "Total Time"|xlt }} - {{ e.totalTime|date("h:i") }}
+    {% if e.startTime and e.endTime %}
+        {% if e.startTime and e.endTime %}
+            <br>{{ "Start Time"|xlt }} - {{ e.startTime|date("h:i a") }}
+            <br>{{ "End Time"|xlt }} - {{ e.endTime|date("h:i a") }}
+
+            <br>{{ "Total Time"|xlt }} - {{ totalTime|text }}
+        {% endif %}
     {% endif %}
 {% endfor %}
 </div>
